added design document with componets interfaces descriptions

--- a/docs/plan.org
+++ b/docs/plan.org
@@ -6,19 +6,13 @@
    JavaScript based DSL
 
 ** Form Initialization
-   client side markup generation (templates) and form initialization
+   client side markup generation (templates) and form initialization (events)
 
 ** Data Binding
-   two way data binding
+   two way data binding, expressions
 
 ** Validation
    declarative validataion, error notification
-
-** Context
-   context dependent properties (hidden, readonly)
-
-** Events
-   events, dependencies
 
 ** Change Tracking
    undo/redo, changes highlight
