--- a/docs/plan.org
+++ b/docs/plan.org
@@ -25,6 +25,8 @@
 
   - comboBox control (binding to list of entities)
   - toolBar & button controls (a way to run validation)
+  - panel control
   - ? formDebugger control or an easy way to debug form
   - build: JSLint + Closure Compiler validation
+  - add header to all files
   - 
