--- a/docs/plan.org
+++ b/docs/plan.org
@@ -29,4 +29,5 @@
   - ? formDebugger control or an easy way to debug form
   - build: JSLint + Closure Compiler validation
   - add header to all files
+  - find out a way to avoid name conflicts in DSL
   - 
